Use a JFlag, and disable the default publication for the plugin.